# openstack-grep

./: .gitignore  .travis.yaml  README.md  config.sample.yaml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
osgrep/: env.py  exc.py  log.py  runner.py
osgrep/templates/: __init__.py  grep.tpl
osgrep/tests/: mockssh.py  test_env.py  test_runner.py
perejil/tests/: test_env.py
