[metadata]
name = pbr
author = Code Factory Chile
summary = OpenStack smart greper
description-file = README.md
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    openstack
    tools
[files]
packages =
    pbr
[entry_points]
console_scripts =
    osgrep = osgrep.grep:main
